--- a/bie-kan-wo.html
+++ b/bie-kan-wo.html
@@ -94,11 +94,9 @@
 <p><strong>照相/做饭/旅行</strong><br />
 乘公交车和逛菜市场都非常有趣<br />
 <a href="http://music.163.com/#/song?id=95811">土豆多少钱一个?</a><br />
-近期的目标是跑全马和开飞机<br />
-还想给绿绿买个礼物</p>
+近期的目标是跑全马和开飞机<br /> </p>
 <p>过了对一切大竖中指的年纪<br />
-有个不会过期的凤梨罐头
-会看着姑娘的眼睛说尽湉菿鎄殤的情话<br />
+还有了个不会过期的凤梨罐头<br />
 标准<a href="http://baike.baidu.com/view/17387.htm">天秤</a></p>
 <p>颜即正义，这不是一个玩笑------&gt;<a href="#" id="noNew" onClick="toggle('hiddenImg')">【真相】</a></p>
 <p>愿上苍保佑每一个直男！</p>
