--- a/developer-interview-crib-sheet.html
+++ b/developer-interview-crib-sheet.html
@@ -1303,22 +1303,22 @@ Domain: Each attribute has a domain, e.g. Integer, 20-character string, etc.</p>
 
 <h4><i class="fa fa-tags fa-fw fa-lg"></i> Tags</h4>
 <p class="tag-cloud">
-<span class="tag-[<pelican.contents.Article object at 0x7f2685374d50>]">
+<span class="tag-[<pelican.contents.Article object at 0x7fea48feadd0>]">
     <a href="https://ecsys.github.io/tag/interview.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>interview
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f2685173f10>]">
+<span class="tag-[<pelican.contents.Article object at 0x7fea49055090>]">
     <a href="https://ecsys.github.io/tag/c.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>C++
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f268518fed0>]">
+<span class="tag-[<pelican.contents.Article object at 0x7fea49090550>]">
     <a href="https://ecsys.github.io/tag/bigdata.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>BigData
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f268518fed0>]">
+<span class="tag-[<pelican.contents.Article object at 0x7fea49090550>]">
     <a href="https://ecsys.github.io/tag/hadoop.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>Hadoop
     </a>
