--- a/pages/bu-yao-dian.html
+++ b/pages/bu-yao-dian.html
@@ -90,13 +90,15 @@
 异教徒自行退散</p>
 <p><strong>照相/做饭/旅行</strong><br />
 乘公交车和逛菜市场都非常有趣<br />
-<a href="http://music.163.com/#/song?id=95811">土豆多少钱一个?</a><br />
-近期的目标是跑全马和开飞机<br /></p>
+<a href="http://music.163.com/#/song?id=28638802">土豆多少钱一个?</a><br />
+近期的目标是~跑全马~跳伞和开飞机  </p>
 <p>过了对一切大竖中指的年纪<br />
-还有了个不会过期的凤梨罐头<br />
+有个不会过期的凤梨罐头
 标准<a href="http://baike.baidu.com/view/17387.htm">天秤</a></p>
 <p>颜即正义，这不是一个玩笑------&gt;<a href="#" id="noNew" onClick="toggle('hiddenImg')">【真相】</a></p>
-<p>愿上苍保佑每一个直男！</p>
+<p>一个人应该活得是自己
+并且干净
+            --顾城</p>
   </div>
 
 
@@ -134,22 +136,22 @@
 
 <h4><i class="fa fa-tags fa-fw fa-lg"></i> Tags</h4>
 <p class="tag-cloud">
-<span class="tag-[<pelican.contents.Article object at 0x7f2685374d50>]">
+<span class="tag-[<pelican.contents.Article object at 0x7fea48feadd0>]">
     <a href="https://ecsys.github.io/tag/interview.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>interview
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f2685173f10>]">
+<span class="tag-[<pelican.contents.Article object at 0x7fea49055090>]">
     <a href="https://ecsys.github.io/tag/c.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>C++
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f268518fed0>]">
+<span class="tag-[<pelican.contents.Article object at 0x7fea49090550>]">
     <a href="https://ecsys.github.io/tag/bigdata.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>BigData
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f268518fed0>]">
+<span class="tag-[<pelican.contents.Article object at 0x7fea49090550>]">
     <a href="https://ecsys.github.io/tag/hadoop.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>Hadoop
     </a>
