--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -83,9 +83,9 @@
   </header>
   <div class="content-body" itemprop="text">
     <h3>Software developer @ Montreal</h3>
-<p>I use Vim. <br />
+<p>Vim is good. <br />
 I use spaces for indentation.<br />
-I will write other things about me when I feel like doing so.  </p>
+More to be added... </p>
   </div>
 
 
@@ -123,22 +123,22 @@ I will write other things about me when I feel like doing so.  </p>
 
 <h4><i class="fa fa-tags fa-fw fa-lg"></i> Tags</h4>
 <p class="tag-cloud">
-<span class="tag-[<pelican.contents.Article object at 0x7f2685374d50>]">
+<span class="tag-[<pelican.contents.Article object at 0x7fea48feadd0>]">
     <a href="https://ecsys.github.io/tag/interview.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>interview
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f2685173f10>]">
+<span class="tag-[<pelican.contents.Article object at 0x7fea49055090>]">
     <a href="https://ecsys.github.io/tag/c.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>C++
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f268518fed0>]">
+<span class="tag-[<pelican.contents.Article object at 0x7fea49090550>]">
     <a href="https://ecsys.github.io/tag/bigdata.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>BigData
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f268518fed0>]">
+<span class="tag-[<pelican.contents.Article object at 0x7fea49090550>]">
     <a href="https://ecsys.github.io/tag/hadoop.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>Hadoop
     </a>
