--- a/archives.html
+++ b/archives.html
@@ -48,12 +48,6 @@
 
       <div class="collapse navbar-collapse" id="main-navbar-collapse">
         <ul class="nav navbar-nav">
-              <li>
-                <a href="https://ecsys.github.io/pages/about-me.html">About me</a>
-              </li>
-              <li>
-                <a href="https://ecsys.github.io/pages/bu-yao-dian.html">不要点</a>
-              </li>
             <li class="divider"></li>
             <li class="active">
               <a href="https://ecsys.github.io/archives.html">Archives</a>
@@ -92,8 +86,10 @@
   <dl>
 	<dt>Fri 20 November 2015</dt>
 	<dd><a href='https://ecsys.github.io/developer-interview-crib-sheet.html'>Developer Interview Crib Sheet</a></dd>
-	<dt>Tue 03 November 2015</dt>
-	<dd><a href='https://ecsys.github.io/intro-to-hadoop-and-mapreduce-notes.html'>Intro to Hadoop and MapReduce - Notes</a></dd>
+	<dt>Tue 20 October 2015</dt>
+	<dd><a href='https://ecsys.github.io/about-me.html'>About me</a></dd>
+	<dt>Sat 03 October 2015</dt>
+	<dd><a href='https://ecsys.github.io/shuo-liao-bu-yao-dian.html'>说了不要点</a></dd>
   </dl>
 </div> <!-- /#archives-body -->
         </div><!-- /content -->
@@ -119,6 +115,8 @@
 <div class="col-xs-6 col-md-12">
 <h4><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h4>
 <ul class="list-unstyled category-links">
+  <li><a href="https://ecsys.github.io/category/about.html" >
+    <i class="fa fa-folder-open fa-fw fa-lg"></i> About</a></li>
   <li><a href="https://ecsys.github.io/category/tech.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Tech</a></li>
 </ul>
@@ -129,24 +127,14 @@
 
 <h4><i class="fa fa-tags fa-fw fa-lg"></i> Tags</h4>
 <p class="tag-cloud">
-<span class="tag-[<pelican.contents.Article object at 0x7fea48feadd0>]">
+<span class="tag-[<pelican.contents.Article object at 0x7f37d3399dd0>]">
     <a href="https://ecsys.github.io/tag/interview.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>interview
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7fea49055090>]">
+<span class="tag-[<pelican.contents.Article object at 0x7f37d3386090>]">
     <a href="https://ecsys.github.io/tag/c.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>C++
-    </a>
-</span>
-<span class="tag-[<pelican.contents.Article object at 0x7fea49090550>]">
-    <a href="https://ecsys.github.io/tag/bigdata.html">
-        <i class="fa fa-tag fa-fw fa-lg"></i>BigData
-    </a>
-</span>
-<span class="tag-[<pelican.contents.Article object at 0x7fea49090550>]">
-    <a href="https://ecsys.github.io/tag/hadoop.html">
-        <i class="fa fa-tag fa-fw fa-lg"></i>Hadoop
     </a>
 </span>
 </p>
