--- a/c-primer5th-edition-reading-notes.html
+++ b/c-primer5th-edition-reading-notes.html
@@ -48,12 +48,6 @@
 
       <div class="collapse navbar-collapse" id="main-navbar-collapse">
         <ul class="nav navbar-nav">
-              <li>
-                <a href="https://ecsys.github.io/pages/about-me.html">About me</a>
-              </li>
-              <li>
-                <a href="https://ecsys.github.io/pages/bu-yao-dian.html">不要点</a>
-              </li>
             <li class="divider"></li>
             <li class="">
               <a href="https://ecsys.github.io/archives.html">Archives</a>
@@ -637,6 +631,8 @@ Written with <a href="https://stackedit.io/">StackEdit</a>.</p>
 <div class="col-xs-6 col-md-12">
 <h4><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h4>
 <ul class="list-unstyled category-links">
+  <li><a href="https://ecsys.github.io/category/about.html" >
+    <i class="fa fa-folder-open fa-fw fa-lg"></i> About</a></li>
   <li><a href="https://ecsys.github.io/category/tech.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Tech</a></li>
 </ul>
@@ -647,24 +643,14 @@ Written with <a href="https://stackedit.io/">StackEdit</a>.</p>
 
 <h4><i class="fa fa-tags fa-fw fa-lg"></i> Tags</h4>
 <p class="tag-cloud">
-<span class="tag-[<pelican.contents.Article object at 0x7fea48feadd0>]">
+<span class="tag-[<pelican.contents.Article object at 0x7f37d3399dd0>]">
     <a href="https://ecsys.github.io/tag/interview.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>interview
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7fea49055090>]">
+<span class="tag-[<pelican.contents.Article object at 0x7f37d3386090>]">
     <a href="https://ecsys.github.io/tag/c.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>C++
-    </a>
-</span>
-<span class="tag-[<pelican.contents.Article object at 0x7fea49090550>]">
-    <a href="https://ecsys.github.io/tag/bigdata.html">
-        <i class="fa fa-tag fa-fw fa-lg"></i>BigData
-    </a>
-</span>
-<span class="tag-[<pelican.contents.Article object at 0x7fea49090550>]">
-    <a href="https://ecsys.github.io/tag/hadoop.html">
-        <i class="fa fa-tag fa-fw fa-lg"></i>Hadoop
     </a>
 </span>
 </p>
