--- a/archives.html
+++ b/archives.html
@@ -48,6 +48,12 @@
 
       <div class="collapse navbar-collapse" id="main-navbar-collapse">
         <ul class="nav navbar-nav">
+              <li>
+                <a href="https://ecsys.github.io/pages/about-me.html">About me</a>
+              </li>
+              <li>
+                <a href="https://ecsys.github.io/pages/bu-yao-dian.html">不要点</a>
+              </li>
             <li class="divider"></li>
             <li class="active">
               <a href="https://ecsys.github.io/archives.html">Archives</a>
@@ -86,10 +92,6 @@
   <dl>
 	<dt>Fri 20 November 2015</dt>
 	<dd><a href='https://ecsys.github.io/developer-interview-crib-sheet.html'>Developer Interview Crib Sheet</a></dd>
-	<dt>Tue 20 October 2015</dt>
-	<dd><a href='https://ecsys.github.io/about-me.html'>About me</a></dd>
-	<dt>Sat 03 October 2015</dt>
-	<dd><a href='https://ecsys.github.io/shuo-liao-bu-yao-dian.html'>说了不要点</a></dd>
   </dl>
 </div> <!-- /#archives-body -->
         </div><!-- /content -->
@@ -115,8 +117,6 @@
 <div class="col-xs-6 col-md-12">
 <h4><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h4>
 <ul class="list-unstyled category-links">
-  <li><a href="https://ecsys.github.io/category/about.html" >
-    <i class="fa fa-folder-open fa-fw fa-lg"></i> About</a></li>
   <li><a href="https://ecsys.github.io/category/tech.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Tech</a></li>
 </ul>
@@ -127,12 +127,12 @@
 
 <h4><i class="fa fa-tags fa-fw fa-lg"></i> Tags</h4>
 <p class="tag-cloud">
-<span class="tag-[<pelican.contents.Article object at 0x7f37d3399dd0>]">
+<span class="tag-[<pelican.contents.Article object at 0x7feec9819810>]">
     <a href="https://ecsys.github.io/tag/interview.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>interview
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f37d3386090>]">
+<span class="tag-[<pelican.contents.Article object at 0x7feeca073550>]">
     <a href="https://ecsys.github.io/tag/c.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>C++
     </a>
