--- a/authors.html
+++ b/authors.html
@@ -48,6 +48,12 @@
 
       <div class="collapse navbar-collapse" id="main-navbar-collapse">
         <ul class="nav navbar-nav">
+              <li>
+                <a href="https://ecsys.github.io/pages/about-me.html">About me</a>
+              </li>
+              <li>
+                <a href="https://ecsys.github.io/pages/bu-yao-dian.html">不要点</a>
+              </li>
             <li class="divider"></li>
             <li class="">
               <a href="https://ecsys.github.io/archives.html">Archives</a>
@@ -75,7 +81,7 @@
 <li>
   <a href="https://ecsys.github.io/author/ecsys.html">
 	<i class="fa fa-user fa-fw fa-lg"></i>Ecsys 
-  </a> (4)
+  </a> (2)
 </li>
 </ul>
         </div><!-- /content -->
@@ -101,8 +107,6 @@
 <div class="col-xs-6 col-md-12">
 <h4><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h4>
 <ul class="list-unstyled category-links">
-  <li><a href="https://ecsys.github.io/category/about.html" >
-    <i class="fa fa-folder-open fa-fw fa-lg"></i> About</a></li>
   <li><a href="https://ecsys.github.io/category/tech.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Tech</a></li>
 </ul>
@@ -113,12 +117,12 @@
 
 <h4><i class="fa fa-tags fa-fw fa-lg"></i> Tags</h4>
 <p class="tag-cloud">
-<span class="tag-[<pelican.contents.Article object at 0x7f37d3399dd0>]">
+<span class="tag-[<pelican.contents.Article object at 0x7feec9819810>]">
     <a href="https://ecsys.github.io/tag/interview.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>interview
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f37d3386090>]">
+<span class="tag-[<pelican.contents.Article object at 0x7feeca073550>]">
     <a href="https://ecsys.github.io/tag/c.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>C++
     </a>
