--- a/categories.html
+++ b/categories.html
@@ -48,6 +48,12 @@
 
       <div class="collapse navbar-collapse" id="main-navbar-collapse">
         <ul class="nav navbar-nav">
+              <li>
+                <a href="https://ecsys.github.io/pages/about-me.html">About me</a>
+              </li>
+              <li>
+                <a href="https://ecsys.github.io/pages/bu-yao-dian.html">不要点</a>
+              </li>
             <li class="divider"></li>
             <li class="">
               <a href="https://ecsys.github.io/archives.html">Archives</a>
@@ -72,7 +78,6 @@
         <div class="col-md-9" id="content">
 <h1 class="direct-heading"><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h1>
 <ul class="direct-list">
-	<li><a href="https://ecsys.github.io/category/about.html">About</a></li>
 	<li><a href="https://ecsys.github.io/category/tech.html">Tech</a></li>
 </ul>
         </div><!-- /content -->
@@ -98,8 +103,6 @@
 <div class="col-xs-6 col-md-12">
 <h4><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h4>
 <ul class="list-unstyled category-links">
-  <li><a href="https://ecsys.github.io/category/about.html" >
-    <i class="fa fa-folder-open fa-fw fa-lg"></i> About</a></li>
   <li><a href="https://ecsys.github.io/category/tech.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Tech</a></li>
 </ul>
@@ -110,12 +113,12 @@
 
 <h4><i class="fa fa-tags fa-fw fa-lg"></i> Tags</h4>
 <p class="tag-cloud">
-<span class="tag-[<pelican.contents.Article object at 0x7f37d3399dd0>]">
+<span class="tag-[<pelican.contents.Article object at 0x7feec9819810>]">
     <a href="https://ecsys.github.io/tag/interview.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>interview
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f37d3386090>]">
+<span class="tag-[<pelican.contents.Article object at 0x7feeca073550>]">
     <a href="https://ecsys.github.io/tag/c.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>C++
     </a>
