added delete line

--- a/pages/bu-yao-dian.html
+++ b/pages/bu-yao-dian.html
@@ -91,7 +91,7 @@
 <p><strong>照相/做饭/旅行</strong><br />
 乘公交车和逛菜市场都非常有趣<br />
 <a href="http://music.163.com/#/song?id=28638802">土豆多少钱一个?</a><br />
-近期的目标是~跑全马~跳伞和开飞机  </p>
+近期的目标是<del>跑全马</del>跳伞和开飞机  </p>
 <p>过了对一切大竖中指的年纪<br />
 有个不会过期的凤梨罐头
 标准<a href="http://baike.baidu.com/view/17387.htm">天秤</a></p>
