--- a/archives.html
+++ b/archives.html
@@ -83,6 +83,11 @@
 </ol>
 <h1>Archives</h1>
 <div id="archives-body">
+  <h2>2017</h2>
+  <dl>
+	<dt>Sun 15 October 2017</dt>
+	<dd><a href='https://ecsys.github.io/gini-coefficient-in-kaggle-and-python-implementation.html'>Gini Coefficient in Kaggle and Python Implementation</a></dd>
+  </dl>
   <h2>2016</h2>
   <dl>
 	<dt>Thu 28 January 2016</dt>
@@ -127,14 +132,29 @@
 
 <h4><i class="fa fa-tags fa-fw fa-lg"></i> Tags</h4>
 <p class="tag-cloud">
-<span class="tag-[<pelican.contents.Article object at 0x7feec9819810>]">
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d9b2e710>]">
     <a href="https://ecsys.github.io/tag/interview.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>interview
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7feeca073550>]">
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d860b6d0>]">
     <a href="https://ecsys.github.io/tag/c.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>C++
+    </a>
+</span>
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d8e6e750>]">
+    <a href="https://ecsys.github.io/tag/gini.html">
+        <i class="fa fa-tag fa-fw fa-lg"></i>Gini
+    </a>
+</span>
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d8e6e750>]">
+    <a href="https://ecsys.github.io/tag/kaggle.html">
+        <i class="fa fa-tag fa-fw fa-lg"></i>Kaggle
+    </a>
+</span>
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d8e6e750>]">
+    <a href="https://ecsys.github.io/tag/machine-learning.html">
+        <i class="fa fa-tag fa-fw fa-lg"></i>Machine learning
     </a>
 </span>
 </p>
