--- a/authors.html
+++ b/authors.html
@@ -81,7 +81,7 @@
 <li>
   <a href="https://ecsys.github.io/author/ecsys.html">
 	<i class="fa fa-user fa-fw fa-lg"></i>Ecsys 
-  </a> (2)
+  </a> (3)
 </li>
 </ul>
         </div><!-- /content -->
@@ -117,14 +117,29 @@
 
 <h4><i class="fa fa-tags fa-fw fa-lg"></i> Tags</h4>
 <p class="tag-cloud">
-<span class="tag-[<pelican.contents.Article object at 0x7feec9819810>]">
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d9b2e710>]">
     <a href="https://ecsys.github.io/tag/interview.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>interview
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7feeca073550>]">
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d860b6d0>]">
     <a href="https://ecsys.github.io/tag/c.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>C++
+    </a>
+</span>
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d8e6e750>]">
+    <a href="https://ecsys.github.io/tag/gini.html">
+        <i class="fa fa-tag fa-fw fa-lg"></i>Gini
+    </a>
+</span>
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d8e6e750>]">
+    <a href="https://ecsys.github.io/tag/kaggle.html">
+        <i class="fa fa-tag fa-fw fa-lg"></i>Kaggle
+    </a>
+</span>
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d8e6e750>]">
+    <a href="https://ecsys.github.io/tag/machine-learning.html">
+        <i class="fa fa-tag fa-fw fa-lg"></i>Machine learning
     </a>
 </span>
 </p>
