--- a/index.html
+++ b/index.html
@@ -78,6 +78,34 @@
         <div class="col-md-9" id="content">
     <article>
 <abbr class="article-header-date">
+  Sun 15 October 2017
+</abbr> <h1>
+  <a href="https://ecsys.github.io/gini-coefficient-in-kaggle-and-python-implementation.html" rel="bookmark"
+     title="Permalink to Gini Coefficient in Kaggle and Python Implementation">
+    Gini Coefficient in Kaggle and Python Implementation
+  </a>
+</h1><div class="article-header-info">
+  <p>
+      Posted by <a href="https://ecsys.github.io/author/ecsys.html">Ecsys</a>
+    in 
+    <a href="https://ecsys.github.io/category/tech.html">
+      Tech</a>
+    &nbsp;&nbsp;
+  </p>
+</div> <!-- /.article-header-info -->  
+      <div class="summary">
+		<h1>Gini Coefficient in Kaggle and Python Implementation</h1>
+<p>One of the Kaggle contest I am participating is using Normalized Gini Coefficient for the evaluation. Here is some notes to understand gini coefficient and how it works.</p>
+<h2>Introduction to Gini Coefficient</h2>
+<p>The gini coefficient is usually used in economics to measure the ...</p>
+		<p class="content-emphasis"><a href="https://ecsys.github.io/gini-coefficient-in-kaggle-and-python-implementation.html">
+			Read more... <i class="fa fa-arrow-circle-right fa-fw fa-lg"></i> 
+		</a></p>
+      </div>    </article>
+
+    <hr />
+    <article>
+<abbr class="article-header-date">
   Thu 28 January 2016
 </abbr> <h1>
   <a href="https://ecsys.github.io/c-primer5th-edition-reading-notes.html" rel="bookmark"
@@ -163,14 +191,29 @@
 
 <h4><i class="fa fa-tags fa-fw fa-lg"></i> Tags</h4>
 <p class="tag-cloud">
-<span class="tag-[<pelican.contents.Article object at 0x7feec9819810>]">
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d9b2e710>]">
     <a href="https://ecsys.github.io/tag/interview.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>interview
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7feeca073550>]">
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d860b6d0>]">
     <a href="https://ecsys.github.io/tag/c.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>C++
+    </a>
+</span>
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d8e6e750>]">
+    <a href="https://ecsys.github.io/tag/gini.html">
+        <i class="fa fa-tag fa-fw fa-lg"></i>Gini
+    </a>
+</span>
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d8e6e750>]">
+    <a href="https://ecsys.github.io/tag/kaggle.html">
+        <i class="fa fa-tag fa-fw fa-lg"></i>Kaggle
+    </a>
+</span>
+<span class="tag-[<pelican.contents.Article object at 0x7ff2d8e6e750>]">
+    <a href="https://ecsys.github.io/tag/machine-learning.html">
+        <i class="fa fa-tag fa-fw fa-lg"></i>Machine learning
     </a>
 </span>
 </p>
