--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -51,9 +51,6 @@
               <li class="active">
                 <a href="https://ecsys.github.io/pages/about-me.html">About me</a>
               </li>
-              <li>
-                <a href="https://ecsys.github.io/pages/bu-yao-dian.html">不要点</a>
-              </li>
             <li class="divider"></li>
             <li class="">
               <a href="https://ecsys.github.io/archives.html">Archives</a>
@@ -123,27 +120,22 @@ More to be added... </p>
 
 <h4><i class="fa fa-tags fa-fw fa-lg"></i> Tags</h4>
 <p class="tag-cloud">
-<span class="tag-[<pelican.contents.Article object at 0x7f0264aab710>]">
+<span class="tag-[<pelican.contents.Article object at 0x7f8d1202c690>]">
     <a href="https://ecsys.github.io/tag/interview.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>interview
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f02635886d0>]">
-    <a href="https://ecsys.github.io/tag/c.html">
-        <i class="fa fa-tag fa-fw fa-lg"></i>C++
-    </a>
-</span>
-<span class="tag-[<pelican.contents.Article object at 0x7f0263deb750>]">
+<span class="tag-[<pelican.contents.Article object at 0x7f8d1288f710>]">
     <a href="https://ecsys.github.io/tag/gini.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>Gini
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f0263deb750>]">
+<span class="tag-[<pelican.contents.Article object at 0x7f8d1288f710>]">
     <a href="https://ecsys.github.io/tag/kaggle.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>Kaggle
     </a>
 </span>
-<span class="tag-[<pelican.contents.Article object at 0x7f0263deb750>]">
+<span class="tag-[<pelican.contents.Article object at 0x7f8d1288f710>]">
     <a href="https://ecsys.github.io/tag/machine-learning.html">
         <i class="fa fa-tag fa-fw fa-lg"></i>Machine learning
     </a>
